# -PLUGINS

example/: CMakeLists.txt
example/ExampleGLPlugin/: CMakeLists.txt  ExampleGLPlugin.qrc  info.json
example/ExampleGLPlugin/include/: Bilateral.h  CMakeLists.txt  ExampleGLPlugin.h
example/ExampleGLPlugin/shaders/: CMakeLists.txt
example/ExampleGLPlugin/src/: Bilateral.cpp  CMakeLists.txt  ExampleGLPlugin.cpp
example/ExampleIOPlugin/: CMakeLists.txt  ExampleIOPlugin.qrc  info.json
example/ExampleIOPlugin/include/: CMakeLists.txt  ExampleIOPlugin.h  FooFilter.h
example/ExampleIOPlugin/src/: CMakeLists.txt  ExampleIOPlugin.cpp  FooFilter.cpp
example/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.qrc  info.json
example/ExamplePlugin/include/: ActionA.h  CMakeLists.txt  ExamplePlugin.h
example/ExamplePlugin/src/: ActionA.cpp  CMakeLists.txt  ExamplePlugin.cpp
example/qUDPTransfer/: CMakeLists.txt  info.json
example/qUDPTransfer/include/: qUDPPointCloud.h  qUDPTransfer.h  qUDPTransferDlg.h
example/qUDPTransfer/src/: qUDPPointCloud.cpp  qUDPTransfer.cpp  qUDPTransferDlg.cpp
example/qVolumeMeasure/: CMakeLists.txt
example/qVolumeMeasure/include/: qVolumeMeasureDlg.h
example/qVolumeMeasure/src/: qVolumeMeasure.cpp  qVolumeMeasureDlg.cpp
example/qXYZILoader/: CMakeLists.txt  qXYZILoader.qrc
example/qXYZILoader/include/: XYZILoaderIOPlugin.h
example/qXYZILoader/src/: XYZIFilter.cpp
my_cc_plugins/: CMakeLists.txt  LICENSE  README.md
my_cc_plugins/qUDPTransfer/: CMakeLists.txt  qUDPTransfer.qrc
my_cc_plugins/qUDPTransfer/include/: qUDPPointCloud.h  qUDPTransfer.h  qUDPTransferDlg.h
my_cc_plugins/qUDPTransfer/src/: qUDPPointCloud.cpp  qUDPTransfer.cpp  qUDPTransferDlg.cpp
my_cc_plugins/qUDPTransfer/ui/: qUDPTransfer.ui
my_cc_plugins/qVolumeMeasure/: CMakeLists.txt  info.json  qVolumeMeasure.qrc
my_cc_plugins/qVolumeMeasure/include/: qVolumeMeasure.h
my_cc_plugins/qVolumeMeasure/src/: qVolumeMeasureDlg.cpp
my_cc_plugins/qVolumeMeasure/ui/: qVolumeMeasure.ui
my_cc_plugins/qXYZILoader/: CMakeLists.txt  info.json
my_cc_plugins/qXYZILoader/include/: XYZIFilter.h
my_cc_plugins/qXYZILoader/src/: XYZILoaderIOPlugin.cpp
